feat(llm): Factory 注册 DeepSeek + RemoteBgeM3Provider
Task M3:
- 抽 DoubaoAdapter（USER_FACING）implements LLMProvider，AiService 不再直调豆包
- LLMProviderRouter 按 LLMTaskType 路由 provider（USER_FACING→豆包，BACKGROUND→DeepSeek）
- LlmErrCode.LLM_PROVIDER_NOT_FOUND(4005)
- AiService 重构 + 清理废弃豆包字段和 fallback 字符串
- AiServiceTest 改 mock LLMProviderRouter；新增 LLMProviderRouterTest + DoubaoAdapterTest